# NeuralNetwork_from_scratch

./: README.md  demo.py  nn.py  pyproject.toml
nn/: model.py
